--- a/index.html
+++ b/index.html
@@ -118,13 +118,19 @@
             <div
               class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center"
             >
-              <h1 data-aos="fade-up">Asian Food</h1>
+              <h1 data-aos="fade-up">Enjoy Your Healthy<br />Delicious Food</h1>
               <p data-aos="fade-up" data-aos-delay="100">
-                Embarquez pour un voyage culinaire inoubliable avec nos recettes
-                asiatiques authentiques
+                We are team of talented designers making websites with Bootstrap
               </p>
               <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-                <a href="#menu" class="btn-get-started">C'est parti</a>
+                <a href="#book-a-table" class="btn-get-started"
+                  >Booka a Table</a
+                >
+                <a
+                  href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
+                  class="glightbox btn-watch-video d-flex align-items-center"
+                  ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
+                >
               </div>
             </div>
             <div
@@ -132,7 +138,7 @@
               data-aos="zoom-out"
             >
               <img
-                src="assets/img/ImgDéco/Cat and dog cooking together.png"
+                src="assets/img/hero-img.png"
                 class="img-fluid animated"
                 alt=""
               />
