--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+  />
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -121,21 +125,17 @@
           </div>
       </div><!-- End Why Box -->
 
-      <section id="why-us">
-        <div class="container">
-            <div class="row gy-4">
-                <div class="text-center">
-                    <!-- Contenu central -->
-                </div>
-            </div>
-        </div><!-- End Why Box -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2></h2>
+        <p><span>Recettes</span> <span class="description-title">les mieux notées</span></p>
+      </div><!-- End Section Title -->
 
-        <div class="container mt-2" id="cont">
+        <div class="container mt-2" id="cont" >
             <div class="card card1">
                 <div class="header">
-                    <div class="icon">
+                   <!-- <div class="icon">
                         <a href="#"><i class="fa fa-heart-o"></i></a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="text">
                     <h1 class="food">Nouilles chinoise</h1>
@@ -143,7 +143,7 @@
                     <i class="fa fa-users"> Pour 2</i>
                     <div class="stars">
                         <li>
-                            <a href="#"><i class="fa fa-star"></i></a>
+                            <a href="#"><i class="fa fa-star">4,5 étoiles</i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
@@ -158,7 +158,7 @@
             <div class="card card2">
                 <div class="header">
                     <div class="icon">
-                        <a href="#"><i class="fa fa-heart-o"></i></a>
+                       <!-- <a href="#"><i class="fa fa-heart-o"></i></a>-->
                     </div>
                 </div>
                 <div class="text">
@@ -167,7 +167,7 @@
                     <i class="fa fa-users"> Pour 3</i>
                     <div class="stars">
                         <li>
-                            <a href="#"><i class="fa fa-star"></i></a>
+                            <a href="#"><i class="fa fa-star">5 étoiles</i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
@@ -182,8 +182,8 @@
             <div class="card card3">
                 <div class="header">
                     <div class="icon">
-                        <a href="#"><i class="fa fa-heart-o"></i></a>
-                    </div>
+                       <!-- <a href="#"><i class="fa fa-heart-o"></i></a>-->
+                      </div>
                 </div>
                 <div class="text">
                     <h1 class="food">Friture Coréenne</h1>
@@ -191,7 +191,7 @@
                     <i class="fa fa-users"> Pour 4</i>
                     <div class="stars">
                         <li>
-                            <a href="#"><i class="fa fa-star"></i></a>
+                            <a href="#"><i class="fa fa-star">5 étoiles</i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
@@ -206,8 +206,8 @@
             <div class="card card4">
                 <div class="header">
                     <div class="icon">
-                        <a href="#"><i class="fa fa-heart-o"></i></a>
-                    </div>
+                       <!-- <a href="#"><i class="fa fa-heart-o"></i></a>-->
+                      </div>
                 </div>
                 <div class="text">
                     <h1 class="food">Salade thaïe épicée</h1>
@@ -215,7 +215,7 @@
                     <i class="fa fa-users"> Pour 2</i>
                     <div class="stars">
                         <li>
-                            <a href="#"><i class="fa fa-star"></i></a>
+                            <a href="#"><i class="fa fa-star"> 4,8 étoiles</i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
                             <a href="#"><i class="fa fa-star"></i></a>
