stars have been added

--- a/index - Copie.html
+++ b/index - Copie.html
@@ -144,11 +144,11 @@
             <i class="fa fa-users"> Pour 2</i>
             <div class="stars">
               <li>
-                <a href="#"><i class="fa fa-star">4,5 étoiles</i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star-o"></i></a>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-half text-warning"></i>
               </li>
             </div>
             <p class="info">Découvrez des nouilles chinoises parfumées, pleines de saveurs, légumes croquants, sauce
@@ -169,11 +169,11 @@
             <i class="fa fa-users"> Pour 3</i>
             <div class="stars">
               <li>
-                <a href="#"><i class="fa fa-star">5 étoiles</i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star-o"></i></a>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
               </li>
             </div>
             <p class="info">Découvrez, dégustez des sushis japonais frais, riz vinaigré et poisson fondant : expérience
@@ -194,11 +194,11 @@
             <i class="fa fa-users"> Pour 4</i>
             <div class="stars">
               <li>
-                <a href="#"><i class="fa fa-star">5 étoiles</i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star-o"></i></a>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
               </li>
             </div>
             <p class="info">Délectez-vous d'une friture coréenne croustillante, sauce sucrée-épicée : alliance parfaite
@@ -219,11 +219,11 @@
             <i class="fa fa-users"> Pour 2</i>
             <div class="stars">
               <li>
-                <a href="#"><i class="fa fa-star"> 4,8 étoiles</i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star"></i></a>
-                <a href="#"><i class="fa fa-star-o"></i></a>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-half text-warning"></i>
               </li>
             </div>
             <p class="info">Explorez, savourez une salade thaï piquante, herbes fraîches, arachides croquantes : une
