--- a/herosection.html
+++ b/herosection.html
@@ -102,9 +102,7 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="index.html#book-a-table"
-          >Book a Table</a
-        >
+        <a class="btn-getstarted" href="index.html#book-a-table">C'est parti</a>
       </div>
     </header>
 
