Trying to modify current footer as I see fit

--- a/index - Copie.html
+++ b/index - Copie.html
@@ -30,6 +30,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
   <link href="assets/css/baris.css" rel="stylesheet">
+  <link href="assets/css/footer.css" rel="stylesheet">
 
 
 
@@ -355,7 +356,7 @@
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
-            <h4>Address</h4>
+            <h4 style="font-family: RamRam;">Address</h4>
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p></p>
@@ -366,7 +367,7 @@
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-telephone icon"></i>
           <div>
-            <h4>Contact</h4>
+            <h4 style="font-family: RamRam;">Contact</h4>
             <p>
               <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
               <strong>Email:</strong> <span>info@example.com</span><br>
@@ -377,7 +378,7 @@
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-clock icon"></i>
           <div>
-            <h4>Opening Hours</h4>
+            <h4 style="font-family: RamRam;">Opening Hours</h4>
             <p>
               <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
               <strong>Sunday</strong>: <span>Closed</span>
@@ -386,7 +387,7 @@
         </div>
 
         <div class="col-lg-3 col-md-6">
-          <h4>Follow Us</h4>
+          <h4 style="font-family: RamRam;">Follow Us</h4>
           <div class="social-links d-flex">
             <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
