--- a/index.html
+++ b/index.html
@@ -695,11 +695,16 @@
 
   </main>
 
-  <<footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="row">
+
+        <div class="footer-col footer-col-logo">
+          <a href="#"><img src="assets/img/baris/vecteur-degrade-logo-colore-oiseau_343694-1365.avif" alt="Logo" class="footer-logo"></a>
+        </div>
+
         <div class="footer-col">
-          <h4>company</h4>
+          <h4>Dernières recettes</h4>
           <ul>
             <li><a href="#">about us</a></li>
             <li><a href="#">our services</a></li>
@@ -707,32 +712,22 @@
             <li><a href="#">affiliate program</a></li>
           </ul>
         </div>
-        <div class="footer-col">
-          <h4>get help</h4>
-          <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">shipping</a></li>
-            <li><a href="#">returns</a></li>
-            <li><a href="#">order status</a></li>
-            <li><a href="#">payment options</a></li>
-          </ul>
+
+        <div class="footer-col newsletter-col">
+          <h4> Notre newsletter</h4>
+          <form class="newsletter-form">
+            <input type="email" placeholder="Votre email" required>
+            <button type="submit">S'inscrire</button>
+          </form>
         </div>
+        
         <div class="footer-col">
-          <h4>online shop</h4>
-          <ul>
-            <li><a href="#">watch</a></li>
-            <li><a href="#">bag</a></li>
-            <li><a href="#">shoes</a></li>
-            <li><a href="#">dress</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>follow us</h4>
+          <h4>Suivez nous</h4>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" class="facebook"><img src="assets/img/baris/face.png" alt="Facebook"></a>
+            <a href="#" class="twitter"><img src="assets/img/baris/twit.png" alt="Twitter"></a>
+            <a href="#" class="instagram"><img src="assets/img/baris/instaa.png" alt="Instagram"></a>
+            <a href="#" class="linkedin"><img src="assets/img/baris/linkin.png" alt="LinkedIn"></a>
           </div>
         </div>
       </div>
