--- a/recetteTevin.html
+++ b/recetteTevin.html
@@ -32,32 +32,13 @@
 <body>
 <!--Votre code ici-->
 
+<div class="container">
+    <div class="row justify-content-center">
+        <h1>Yes</h1>
+        
 
-
-<h1 class="text-center">Nom de la Recette</h1>
-<img src="assets/img/ImgDéco/ramen bowl.png">
-
-<div class="col">
-    <img class="col md-off-12" src="assets/img/ImgDéco/ramen bowl.png" width="200px">
-    <img src="assets/img/ImgDéco/ramen bowl.png" width="200px">
-    <img src="assets/img/ImgDéco/ramen bowl.png" width="200px">
-</div>
-
-<!-- Section ingrédient start -->
-
-<section class="section-ingredients">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-">
-                <h2 class="section-title">Ingrédients</h2>
-                <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qu
-                    asperiores, quod.</p>
-            </div>
-        </div>
     </div>
-</section>
-
- <!-- Section ingrédient end -->
+</div>
     
 <!--fin de votre code-->
 <!-- Vendor JS Files -->
