--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                 </ul>
             </div>
 
-            <div class="footer-col newsletter-col">
+            <div class="footer-col newsletter-col" id="newss">
                 <h4>Notre newsletter</h4>
                 <form class="newsletter-form">
                     <input type="email" placeholder="Votre email" required>
